Add activity chart

--- a/sespa/app/views/student_class_site_detail.html
+++ b/sespa/app/views/student_class_site_detail.html
@@ -19,9 +19,10 @@
     </div>
   </div>
   <hr class="main-no-margin-top" />
-  <div id="chart">
-    <svg> </svg>
-  </div>
+
+
+  <div id="assignments-chart"> <svg /> </div>
+  <div id="activity-chart"> <svg /> </div>
   
   <div class="row assignments">
     <h3 class="main-less-weight">Assignments </h3>
