Improve wording around charts

--- a/sespa/app/views/student_class_site_detail.html
+++ b/sespa/app/views/student_class_site_detail.html
@@ -21,8 +21,12 @@
   <hr class="main-no-margin-top" />
 
 
-  <div id="assignments-chart"> <svg /> </div>
-  <div id="activity-chart"> <svg /> </div>
+  <div class="row charts">
+    <h3 class="main-less-weight">Cumulative Score</h3>
+    <div id="assignments-chart"> <svg /> </div>
+    <h3 class="main-less-weight">Weekly Activity</h3>
+    <div id="activity-chart"> <svg /> </div>
+  </div>
   
   <div class="row assignments">
     <h3 class="main-less-weight">Assignments </h3>
