--- a/sespa/app/views/status_image.html
+++ b/sespa/app/views/status_image.html
@@ -1,2 +1,7 @@
-<a href="{{statusOutput.url}}"><img ng-show="statusOutput" class="class-site-status {{statusOutput.status | lowercase}}" ng-src="images/Status_Icons_{{statusOutput.status}}.png"
-       data-toggle="tooltip" data-placement="bottom" alt="{{statusOutput.name}}"/></a>
+<a href="{{ statusOutput.url }}">
+  <img ng-show="statusOutput"
+       class="class-site-status {{ statusOutput.status | lowercase }}"
+       ng-src="images/Status_Icons_{{ statusOutput.status }}.png"
+       data-toggle="tooltip" data-placement="bottom"
+       alt="{{ statusOutput.status | colorToStatus }}"/>
+</a>
