Add ability to filter students by univ_id

--- a/sespa/app/views/student_list.html
+++ b/sespa/app/views/student_list.html
@@ -4,7 +4,7 @@
     <h3 class="panel-title">No Results</h3>
   </div>
   <div class="panel-body">
-    No students found when searching for "{{$parent.search}}".
+    No students found that match the query terms.
   </div>
 </div>
 
