Removed link from this view, since we don't want every status icon to be linked.  Removed unnecessary status name as img class.

--- a/sespa/app/views/status_image.html
+++ b/sespa/app/views/status_image.html
@@ -1,7 +1,5 @@
-<a href="{{ statusOutput.url }}">
-  <img ng-show="statusOutput"
-       class="class-site-status {{ statusOutput.status | lowercase }}"
-       ng-src="images/Status_Icons_{{ statusOutput.status }}.png"
-       data-toggle="tooltip" data-placement="bottom"
-       alt="{{ statusOutput.status | colorToStatus }}"/>
-</a>
+<img ng-show="status"
+     class="class-site-status"
+     ng-src="images/Status_Icons_{{ status }}.png"
+     data-toggle="tooltip" data-placement="bottom"
+     alt="{{ status | colorToStatus }}"/>
