--- a/sespa/app/views/student_list.html
+++ b/sespa/app/views/student_list.html
@@ -50,7 +50,11 @@
       </th>
       <td class="hide-small">{{ student.univ_id }}</td>
       <td>
-        <status-tooltip ng-repeat="status in student.class_site_statuses track by $index" status="status"></status-tooltip>
+        <a href="#/students/{{ student.username }}/class_sites/{{ class_site_status.class_site_id }}/"
+           class="class-site-status-link"
+           ng-repeat="class_site_status in student.class_site_statuses track by $index">
+          <status-tooltip status="class_site_status.status" tooltiptext="class_site_status.name + ': ' + (class_site_status.status | colorToStatus)"></status-tooltip>
+        </a>
       </td>
       <td class="hide-small">
           <div ng-repeat="cohort in student.cohorts">{{ cohort }}</div>
