--- a/sespa/app/views/class_site_detail.html
+++ b/sespa/app/views/class_site_detail.html
@@ -9,10 +9,10 @@
 
 
   <hr class="main-no-margin-top" />
-
+  
   <div class="row">
     <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
-      <h3 class="main-h3">Course Site: {{classSite.class_site.description}} <status-tooltip status="classSite.status" tooltiptext="classSite.status | colorToStatus"></status-tooltip></h3>
+      <h3 class="main-h3">Course Site: {{classSite.class_site.description}} <status-tooltip status="classSite.status"></status-tooltip></h3>
     </div>
     <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
       <div class="pull-right"><br>Data Source: <span class="label label-primary">{{classSite.class_site.source_system}}</span></div>
@@ -39,11 +39,11 @@
     </div>
   </div>
 
-
+  
   <div class="row assignments">
     <h3 class="main-less-weight">Assignments </h3>
     <p><small class="note">Note that this list may not reflect all assignments included in current score calculation. For a complete list, please refer to the source system.</small></p>
-
+    
     <hr class="main-no-margin-top">
     <div ng-if="assignments.length == 0" class="panel panel-info">
       <div class="panel-body">
@@ -87,7 +87,7 @@
             <td>{{assignment.points_earned}}</td>
             <td>{{assignment.points_possible}}</td>
             <td>
-              <span ng-if="assignment.grader_comment != '' &amp;&amp; assignment.grader_comment != null"
+              <span ng-if="assignment.grader_comment != '' &amp;&amp; assignment.grader_comment != null" 
                   class="glyphicon glyphicon-comment" aria-hidden="true"
                   title="{{assignment.grader_comment}}"
                   data-toggle="tooltip" data-placement="bottom" tooltip></span> <span class="sr-only">{{assignment.grader_comment}}</span>
