--- a/sespa/app/views/student_class_site_detail.html
+++ b/sespa/app/views/student_class_site_detail.html
@@ -66,7 +66,7 @@
     <hr class="main-no-margin-top">
     <div ng-if="assignments.length == 0" class="panel panel-info">
       <div class="panel-body">
-        No assignements found for this student.
+        No assignments found for this student.
       </div>
     </div>
 
