--- a/sespa/app/views/student_list.html
+++ b/sespa/app/views/student_list.html
@@ -52,8 +52,9 @@
       <td>
         <a href="#/students/{{ student.username }}/class_sites/{{ class_site_status.class_site_id }}/"
            class="class-site-status-link"
-           ng-repeat="class_site_status in student.class_site_statuses track by $index">
-          <status-tooltip status="class_site_status.status" tooltiptext="class_site_status.name + ': ' + (class_site_status.status | colorToStatus)"></status-tooltip>
+           ng-repeat="class_site_status in student.class_site_statuses track by $index"
+           status-tooltip status="class_site_status.status"
+           tooltiptext="class_site_status.name + ': ' + (class_site_status.status | colorToStatus)">
         </a>
       </td>
       <td class="hide-small">
