Add ability to download assignment data

--- a/sespa/app/views/class_site_detail.html
+++ b/sespa/app/views/class_site_detail.html
@@ -10,3 +10,5 @@
 
 <h3>Sourse System</h3>
 <p>{{classSite.source_system}}</p>
+
+<a href="api/class_sites/{{classSite.code}}/assignments/download/"><button>Download Assignment</button></a>
