--- a/sespa/app/views/student_class_site_detail.html
+++ b/sespa/app/views/student_class_site_detail.html
@@ -62,7 +62,7 @@
   <div class="row assignments">
     <h3 class="main-less-weight">Assignments </h3>
     <p><small class="note">Note that this list may not reflect all assignments included in current score calculation. For a complete list, please refer to the source system.</small></p>
-    
+    <!-- <a href="api/class_sites/{{classSite.class_site.code}}/student/{{student.username}}/assignments/download/"><button>Download Assignment</button></a> -->
     <hr class="main-no-margin-top">
     <div ng-if="assignments.length == 0" class="panel panel-info">
       <div class="panel-body">
