A possible solution: a JavaScript filter for AngularJS' ng-repeat attribute.  However, if the data coming to the page could be unique before the JS processes it, there could be savings in time and bandwidth.

--- a/sespa/app/views/student_list.html
+++ b/sespa/app/views/student_list.html
@@ -43,7 +43,7 @@
     </tr>
   </thead>
   <tbody>
-    <tr ng-repeat="student in students | orderBy:sortType:sortReverse | filter:searchStudent">
+    <tr ng-repeat="student in students | unique:'username' | orderBy:sortType:sortReverse | filter:searchStudent">
       <th scope="row" class="bold">
         <a href="#/students/{{student.username}}/">{{ student.first_name }}
           {{ student.last_name }}</a>
