--- a/sespa/app/views/status_image.html
+++ b/sespa/app/views/status_image.html
@@ -1,4 +1,4 @@
 <img ng-show="status"
      class="class-site-status"
      ng-src="images/Status_Icons_{{ status }}.png"
-     alt="{{ status | colorToStatus }}"/>
+     alt="{{ status | changeStatus }}"/>
