--- a/sespa/app/views/student_list.html
+++ b/sespa/app/views/student_list.html
@@ -54,7 +54,7 @@
            class="class-site-status-link"
            ng-repeat="class_site_status in student.class_site_statuses track by $index"
            status-tooltip status="class_site_status.status"
-           tooltiptext="class_site_status.name + ': ' + (class_site_status.status | colorToStatus)">
+           tooltiptext="class_site_status.name + ': ' + (class_site_status.status | changeStatus)">
         </a>
       </td>
       <td class="hide-small">
