Improve summary visualization on student detail page

--- a/sespa/app/views/student_class_site_list.html
+++ b/sespa/app/views/student_class_site_list.html
@@ -21,6 +21,13 @@
           <a class="unsortable">Current Percentage</a>
         </th>
       </tr>
+      <tr>
+        <td colspan="2"></td>
+        <td>
+          <p class="legend-text"><span class="legend-key student-legend-key"></span>Student</p>
+          <p class="legend-text"><span class="legend-key class-legend-key"></span>Class Average</p>
+        </td>
+      </tr>
     </thead>
     <tbody>
       <tr ng-repeat="classSite in classSites | orderBy:sortType:sortReverse | filter:searchAdvisor">
@@ -29,17 +36,18 @@
           <span status-tooltip status="classSite.status" tooltiptext="classSite.status | colorToStatus"></span>
         </td>
         <td>
-          <div class="progress" ng-if="classSite.current_student_score_average || classSite.current_class_score_average"
-            title="Student Percentage: {{classSite.current_student_score_average}}% &#013; Class Average Percentage: {{classSite.current_class_score_average}}%"
-            data-toggle="tooltip" data-placement="bottom" tooltip>
-            <div class="progress-bar studentGradeBar" role="progressbar" aria-valuenow="{{classSite.current_student_score_average}}"
+          <div class="progress progress-flat" ng-if="classSite.current_student_score_average || classSite.current_class_score_average">
+            <div class="progress-bar progress-bar-flat studentGradeBar" role="progressbar" aria-valuenow="{{classSite.current_student_score_average}}"
               aria-valuemin="0" aria-valuemax="100" style="width: {{classSite.current_student_score_average}}%;">
-              <p class="progress-text">{{classSite.current_student_score_average}}%</p>
+              <p class="progress-text progress-text-outside">{{classSite.current_student_score_average}}%</p>
               <span class="sr-only">Student Percentage: {{classSite.current_student_score_average}}%</span>
             </div>
-            <div class="classAveBar" style="left: {{classSite.current_class_score_average}}%;">
-              <p class="progress-text">{{classSite.current_class_score_average}}%</p>
-              <span class="sr-only">Class Percentage: {{classSite.current_class_score_average}}%</span>
+          </div>
+          <div class="progress progress-flat" ng-if="classSite.current_student_score_average || classSite.current_class_score_average">
+            <div class="progress-bar progress-bar-flat classAveBar" role="progressbar" aria-valuenow="{{classSite.current_class_score_average}}"
+              aria-valuemin="0" aria-valuemax="100" style="width: {{classSite.current_class_score_average}}%;">
+              <p class="progress-text progress-text-outside">{{classSite.current_class_score_average}}%</p>
+              <span class="sr-only">Class Average Percentage: {{classSite.current_class_score_average}}%</span>
             </div>
           </div>
         </td>
