--- a/sespa/app/styles/main.css
+++ b/sespa/app/styles/main.css
@@ -186,6 +186,15 @@ a.class-site-status-link {
 /* For progress bar */
 .progress {
   width: 200px;
+  overflow: visible;
+}
+
+.progress-flat {
+  -webkit-box-shadow: none;
+  background-color: transparent;
+  border-radius: 0;
+  box-shadow: none;
+  margin-bottom: 0;
 }
 
 .progress-bar {
@@ -193,27 +202,70 @@ a.class-site-status-link {
   padding-left: 5px;
 }
 
+.progress-bar-flat {
+  box-shadow: none;
+  -webkit-box-shadow: none;
+}
+
 .progress-label {
   font-weight: bold;
+}
+
+.progress-text{
+    color:#c8d6c7;
+    display: none;
+    margin-left: 6px;
+}
+
+.progress-text-outside {
+  color: black;
+  display: inline-block;
+  padding-left: 5px;
+  position: absolute;
+  right: 0;
+  transform: translateX(100%);
+}
+
+/* For student and class average legend */
+
+.legend-text {
+  display: inline-block;
+  margin-bottom: 0;
+}
+
+.legend-text:not(:first-of-type) {
+  margin-left: 1em;
+}
+
+.legend-key {
+  border-radius: 50%;
+  display: inline-block;
+  height: 10px;
+  margin-right: 0.4em;
+  width: 10px;
+}
+
+.student-legend-key {
+  background-color: #255c91;
+}
+
+.class-legend-key {
+  background-color: #dac251;
 }
 
 /* For student grade progress bar*/
 .studentGradeBar {
   background: #255c91;
+  position: relative;
 }
 
 .classAveBar {
-  width: 5px;
+  background: #dac251;
   height: 20px;
   position: relative;
-  background: #dac251;
+  width: 5px;
 }
 
-.progress-text{
-    display: none;
-    color:#c8d6c7;
-    margin-left: 6px;
-}
 
 .main-no-margin-top{
     margin-top: 0px;
