Implement resizing and accordion

--- a/sespa/app/styles/main.css
+++ b/sespa/app/styles/main.css
@@ -329,3 +329,12 @@ svg text {
 .relative-to-ave-icon img {
     margin-right: 0;
 }
+
+.assignment-button {
+    float: right;
+    margin-right: 20%;
+}
+
+.assignment-button-img {
+    width: 20px;
+}
