Remove window_resize directive

--- a/sespa/app/views/student_class_site_detail.html
+++ b/sespa/app/views/student_class_site_detail.html
@@ -77,7 +77,7 @@
       </div>
     </div>
 
-    <div ng-if="assignments.length > 0" class="table-responsive main-page-end-margin-bottom" window-resize>
+    <div ng-if="assignments.length > 0" class="table-responsive main-page-end-margin-bottom">
       <div ng-include ng-if="windowWidth >= 769" src="'views/assignment_list_table.html'"></div>
       <div ng-include ng-if="windowWidth <= 768" src="'views/assignment_list.html'"></div>
     </div>
