--- a/sespa/app/styles/main.css
+++ b/sespa/app/styles/main.css
@@ -200,6 +200,7 @@ a.class-site-status-link {
 .progress-bar {
   text-align: left;
   padding-left: 5px;
+  min-width: 5em;
 }
 
 .progress-bar-flat {
