--- a/sespa/app/views/dig_data_fetch_progress.html
+++ b/sespa/app/views/dig_data_fetch_progress.html
@@ -1,4 +1,4 @@
-  <div ng-show="showProgress && progress > 0 && progress < 100" class="progress">
+  <div ng-show="showProgress && progress < 100" class="progress">
     <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="{{progress}}" aria-valuemin="0" aria-valuemax="100" style="width: {{progress}}%;">
       <span class="progress-label">Loading...</span>
       <span class="sr-only">{{progress | number:0}}% Complete</span>
