--- a/sespa/app/views/assignment_list.html
+++ b/sespa/app/views/assignment_list.html
@@ -3,6 +3,7 @@
     <div class="panel-heading" role="tab" id="heading{{assignment.assignment.code}}">
       <h4 class="panel-title">
         <span class="assignment-title">{{assignment.assignment.description }}</span>
+        <span class="assignment-title-score">{{assignment.points_earned / assignment.points_possible * 100 | number:1}}%</span>
         <a class="assignment-button" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse{{assignment.assignment.code}}"
           onclick="return false;" ng-click="changeButton(assignment.assignment.code)" aria-expanded="true" aria-controls="collapse{{assignment.assignment.code}}">
           <img class="assignment-button" id="assignmentButton{{assignment.assignment.code}}" src="images/Dropdown_Plus.png" alt="Expand"/>
@@ -11,10 +12,10 @@
     </div>
     <div id="collapse{{assignment.assignment.code}}" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading{{assignment.assignment.code}}">
       <div class="panel-body">
-        <span>Due Date: {{assignment.due_date | date}}</span>
-        <span>Score: {{assignment.points_earned}} / {{assignment.points_possible}}</span>
-        <span>Student's Grade<br>{{assignment.points_earned / assignment.points_possible * 100 | number:1}}%</span>
-        <span>Class Average<br>{{assignment.class_points_earned / assignment.class_points_possible * 100 | number:1}}%</span>
+        <span class="assignment-detail assignment-detail-left"><span class="assignment-detail-bold">Due Date:</span> {{assignment.due_date | date}}</span>
+        <span class="assignment-detail assignment-detail-right"><span class="assignment-detail-bold">Score:</span> {{assignment.points_earned}} / {{assignment.points_possible}}</span>
+        <span class="assignment-detail assignment-detail-left"><span class="assignment-detail-bold">Student's Grade</span><br><span class="assignment-detail-grade">{{assignment.points_earned / assignment.points_possible * 100 | number:1}}%</span></span>
+        <span class="assignment-detail assignment-detail-right"><span class="assignment-detail-bold">Class Average</span><br><span class="assignment-detail-grade">{{assignment.class_points_earned / assignment.class_points_possible * 100 | number:1}}%</span></span>
       </div>
     </div>
   </div>
