--- a/sespa/app/views/student_class_site_detail.html
+++ b/sespa/app/views/student_class_site_detail.html
@@ -42,7 +42,7 @@
         forceY="[0,100]"
         interactive="true"
         tooltips="true"
-
+        xAxisLabel="Week"
         >
           <svg />
     </nvd3-multi-bar-chart>
@@ -60,6 +60,7 @@
         forceY="[0,100]"
         interactive="true"
         tooltips="true"
+        xAxisLabel="Week"
         >
           <svg />
     </nvd3-multi-bar-chart>
