--- a/sespa/app/views/status_image.html
+++ b/sespa/app/views/status_image.html
@@ -1,4 +1,3 @@
 <img ng-show="status"
-     class="class-site-status"
-     ng-src="images/Status_Icons_{{ status }}.png"
+     class="class-site-status status-{{ status | colorToStatus | lowercase }}"
      alt="{{ status | colorToStatus }}"/>
