--- a/sespa/app/views/assignment_list.html
+++ b/sespa/app/views/assignment_list.html
@@ -5,8 +5,8 @@
         <span class="assignment-title">{{assignment.assignment.description }}</span>
         <span class="assignment-title-right">
           <span class="assignment-title-score" ng-if="assignment.points_earned && assignment.points_possible > 0">{{assignment.points_earned / assignment.points_possible * 100 | number:1}}%</span>
-          <a class="assignment-button" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse{{assignment.assignment.code}}"
-          onclick="return false;" ng-click="changeButton(assignment.assignment.code)" aria-expanded="true" aria-controls="collapse{{assignment.assignment.code}}">
+          <a class="assignment-button" id="{{assignment.assignment.code}}" role="button" data-toggle="collapse" data-parent="#accordion" data-target="#collapse{{assignment.assignment.code}}"
+          onclick="changeButton(this)" aria-expanded="true" aria-controls="collapse{{assignment.assignment.code}}">
             <img class="assignment-button" id="assignmentButton{{assignment.assignment.code}}" src="images/Dropdown_Plus.png" alt="Expand"/>
           </a>
         </span>
