Revise style for assignment list row

--- a/sespa/app/styles/main.css
+++ b/sespa/app/styles/main.css
@@ -444,6 +444,9 @@ svg text {
 .assignment-row {
     height: 80px;
     display: block;
+}
+
+.assignment-row-lower {
     margin-bottom: 20px;
 }
 
