--- a/sespa/app/views/student_class_site_list.html
+++ b/sespa/app/views/student_class_site_list.html
@@ -4,7 +4,7 @@
   <p>There is no class site data for this student.</p>
 </div>
 <div ng-if="classSites.length > 0" class="table-responsive">
-  <table class="table">
+  <table class="table student-class-site-list-table">
     <thead>
       <tr>
         <th scope="col">
