--- a/sespa/app/views/student_detail.html
+++ b/sespa/app/views/student_detail.html
@@ -1,33 +1,24 @@
 <div ng-if="student">
 <h2 class="sub-header">{{student.first_name}} {{student.last_name}}</h2>
+<p><a class="unsortable">Student ID: </a>{{ student.univ_id }}</p>
 <hr class="main-no-margin-top"/>
 
-<div class="col-sm-8">
+<div class="col-lg-12">
     <div ng-include="'views/student_class_site_list.html'" ></div>
 </div>
 
-<div class="student-info col-sm-4 well">
-    <div class="table-responsive">
-      <table class="table">
-        <tbody>
-          <tr>
-            <th scope="row"><a class="unsortable">Student ID</a></th>
-            <td>{{ student.univ_id }}</td>
-          </tr>
-          <tr>
-            <th scope="row"><a class="unsortable">Advisors</a></th>
-            <td><p ng-repeat="advisor in advisors">
-                <a href="#/advisors/{{advisor.mentor.username}}/">
-                {{ advisor.mentor.first_name }} {{ advisor.mentor.last_name }}</a>
-                <span class="glyphicon glyphicon-info-sign" aria-hidden="true"
-                    title="{{advisor.cohort}}"
-                    data-toggle="tooltip" data-placement="bottom" tooltip></span><span class="sr-only">{{advisor.role}}</span>
-            </p></td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
+<div class="student-info col-lg-12">
+  <a class="unsortable">Advisors: </a>
+  <p class="advisor-names" ng-repeat="advisor in advisors">
+      <a href="#/advisors/{{advisor.mentor.username}}/">
+      {{ advisor.mentor.first_name }} {{ advisor.mentor.last_name }}</a>
+      <span class="glyphicon glyphicon-info-sign comma" aria-hidden="true"
+          title="{{advisor.cohort}}"
+          data-toggle="tooltip" data-placement="bottom" tooltip></span>
+          <span class="sr-only">{{advisor.role}}</span>
+  </p>
 </div>
+
 </div>
 
 <div ng-if="notFound" class="panel panel-warning not-found">
