--- a/sespa/app/views/student_class_site_list.html
+++ b/sespa/app/views/student_class_site_list.html
@@ -37,14 +37,14 @@
         </td>
         <td>
           <div class="progress progress-flat" ng-if="classSite.current_student_score_average || classSite.current_class_score_average">
-            <div class="progress-bar progress-bar-flat studentGradeBar" role="progressbar" aria-valuenow="{{classSite.current_student_score_average}}"
+            <div class="progress-bar progress-bar-flat student-average-bar" role="progressbar" aria-valuenow="{{classSite.current_student_score_average}}"
               aria-valuemin="0" aria-valuemax="100" style="width: {{classSite.current_student_score_average}}%;">
               <p class="progress-text progress-text-outside">{{classSite.current_student_score_average}}%</p>
               <span class="sr-only">Student Percentage: {{classSite.current_student_score_average}}%</span>
             </div>
           </div>
           <div class="progress progress-flat" ng-if="classSite.current_student_score_average || classSite.current_class_score_average">
-            <div class="progress-bar progress-bar-flat classAveBar" role="progressbar" aria-valuenow="{{classSite.current_class_score_average}}"
+            <div class="progress-bar progress-bar-flat class-average-bar" role="progressbar" aria-valuenow="{{classSite.current_class_score_average}}"
               aria-valuemin="0" aria-valuemax="100" style="width: {{classSite.current_class_score_average}}%;">
               <p class="progress-text progress-text-outside">{{classSite.current_class_score_average}}%</p>
               <span class="sr-only">Class Average Percentage: {{classSite.current_class_score_average}}%</span>
