--- a/sespa/app/styles/main.css
+++ b/sespa/app/styles/main.css
@@ -186,6 +186,15 @@ a.class-site-status-link {
   content:url("../images/Status_Icons_Red.png")
 }
 
+.status-above {
+  content:url("../images/Status_Icons_Above.png")
+}
+.status-near {
+  content:url("../images/Status_Icons_Near.png")
+}
+.status-below {
+  content:url("../images/Status_Icons_Below.png")
+}
 
 @media screen and (max-width: 768px) {
   .open > .dropdown-menu {
@@ -508,4 +517,9 @@ svg text {
 
 .collapsing {
     width: 100%;
+}
+
+.relative-to-ave-icon {
+    float: right;
+    margin-right: 30%;
 }
