--- a/sespa/app/views/assignment_list_table.html
+++ b/sespa/app/views/assignment_list_table.html
@@ -34,12 +34,7 @@
       <th scope="row">{{assignment.assignment.description }}</th>
       <td>{{assignment.due_date | date}}</td>
       <td>{{assignment.points_earned}} / {{assignment.points_possible}}</td>
-      <td>
-          {{assignment.points_earned / assignment.points_possible * 100 | number:1}}%
-          <span class="relative-to-ave-icon" ng-if="assignment.relative_to_average != null"
-            status-tooltip status="assignment.relative_to_average"
-            tooltiptext="assignment.relative_to_average | changeStatus"></span>
-      </td>
+      <td>{{assignment.points_earned / assignment.points_possible * 100 | number:1}}%</td>
       <td>{{assignment.class_points_earned / assignment.class_points_possible * 100 | number:1}}%</td>
       <td></td>
       <td>
