--- a/sespa/app/styles/main.css
+++ b/sespa/app/styles/main.css
@@ -164,6 +164,9 @@ th[scope="row"] {
   .assignment-list {
       display: none;
   }
+  .student-class-site-list {
+      display: none;
+  }
 }
 
 a.class-site-status-link {
@@ -205,6 +208,9 @@ a.class-site-status-link {
     width: 100%
   }
   .assignment-table {
+      display: none;
+  }
+  .student-class-site-table {
       display: none;
   }
   .table-responsive {
@@ -300,7 +306,7 @@ a.class-site-status-link {
   height: 20px;
   margin-bottom: 0;
   overflow: visible;
-  width: 60%;
+  width: 90%;
 }
 
 .average-bar {
@@ -507,4 +513,27 @@ svg text {
 
 .collapsing {
     width: 100%;
+}
+
+.legend-text-block {
+    margin-bottom: 10px;
+    margin-left: 22px; 
+}
+
+.card-block {
+    box-shadow: 0 0 5px gray;
+    padding: 20px;
+    margin: 20px 2px;
+}
+
+.card-title {
+    height: 50px;
+}
+
+.card-title a {
+    font-size: 20px;
+}
+
+.card-class-site-status {
+    float: right;
 }
