--- a/sespa/app/views/student_class_site_list.html
+++ b/sespa/app/views/student_class_site_list.html
@@ -1,58 +1,10 @@
 <div ng-if="classSites" ng-cloak>
-<h2 ng-if="classSiteListHeader" class="sub-header">{{classSiteListHeader}}</h2>
+<h2 ng-if="classSiteListHeader" class="sub-header class-site-list-header">{{classSiteListHeader}}</h2>
 <div ng-if="classSites.length == 0">
   <p>There is no class site data for this student.</p>
 </div>
 <div ng-if="classSites.length > 0" class="table-responsive">
-  <table class="table student-class-site-list-table">
-    <thead>
-      <tr>
-        <th scope="col">
-          <a href="" ng-click="sortType = 'class_site.description'; sortReverse = !sortReverse">
-            Course Site
-            <span class="fa fa-caret-down" ng-show="sortType == 'class_site.description' &amp;&amp; !sortReverse"><span class="sr-only"> (ascending sort)</span></span>
-            <span class="fa fa-caret-up" ng-show="sortType == 'class_site.description' &amp;&amp; sortReverse"><span class="sr-only"> (descending sort)</span></span>
-          </a>
-        </th>
-        <th scope="col">
-          <a class="unsortable">Status</a>
-        </th>
-        <th scope="col">
-          <a class="unsortable">Current Percentage</a>
-        </th>
-      </tr>
-      <tr>
-        <td colspan="2"></td>
-        <td>
-          <p class="legend-text"><span class="legend-key student-legend-key"></span>Student</p>
-          <p class="legend-text"><span class="legend-key class-legend-key"></span>Class Average</p>
-        </td>
-      </tr>
-    </thead>
-    <tbody>
-      <tr ng-repeat="classSite in classSites | orderBy:sortType:sortReverse | filter:searchAdvisor">
-        <th scope="row" class="bold"><a href="#/students/{{student.username}}/class_sites/{{classSite.class_site.code}}">{{ classSite.class_site.description }}</a></th>
-        <td>
-          <span status-tooltip status="classSite.status" tooltiptext="classSite.status | colorToStatus"></span>
-        </td>
-        <td>
-          <div class="average-bar-container" ng-if="classSite.current_student_score_average || classSite.current_class_score_average">
-            <div class="average-bar student-average-bar" role="progressbar" aria-valuenow="{{classSite.current_student_score_average}}"
-              aria-valuemin="0" aria-valuemax="100" style="width: {{classSite.current_student_score_average}}%;">
-              <p class="average-bar-text">{{classSite.current_student_score_average}}%</p>
-              <span class="sr-only">Student Percentage: {{classSite.current_student_score_average}}%</span>
-            </div>
-          </div>
-          <div class="average-bar-container" ng-if="classSite.current_student_score_average || classSite.current_class_score_average">
-            <div class="average-bar class-average-bar" role="progressbar" aria-valuenow="{{classSite.current_class_score_average}}"
-              aria-valuemin="0" aria-valuemax="100" style="width: {{classSite.current_class_score_average}}%;">
-              <p class="average-bar-text">{{classSite.current_class_score_average}}%</p>
-              <span class="sr-only">Class Average Percentage: {{classSite.current_class_score_average}}%</span>
-            </div>
-          </div>
-        </td>
-      </tr>
-    </tbody>
-  </table>
+  <div class="student-class-site-table" ng-include src="'views/student_class_site_list_table.html'"></div>
+  <div class="student-class-site-list" ng-include src="'views/student_class_site_list_list.html'"></div>
 </div>
 </div>
