--- a/sespa/app/views/student_detail.html
+++ b/sespa/app/views/student_detail.html
@@ -1,4 +1,4 @@
-<div ng-if="student">
+<div ng-if="student" class="col-lg-12">
 <h2 class="sub-header">{{student.first_name}} {{student.last_name}}</h2>
 <p><a class="unsortable">Student ID: </a>{{ student.univ_id }}</p>
 <hr class="main-no-margin-top"/>
