--- a/sespa/app/views/student_class_site_list_list.html
+++ b/sespa/app/views/student_class_site_list_list.html
@@ -2,9 +2,10 @@
   <p class="legend-text"><span class="legend-key student-legend-key"></span>Student</p>
   <p class="legend-text"><span class="legend-key class-legend-key"></span>Class Average</p>
 </div>
-<div class="card-block" ng-repeat="classSite in classSites | orderBy:sortType:sortReverse | filter:searchAdvisor">
+<div class="card-block" ng-repeat="classSite in classSites | orderBy:sortType:sortReverse | filter:searchAdvisor"
+  ng-click="goTo('/students/'+student.username+'/class_sites/'+classSite.class_site.code+'/')">
   <div class="card-title">
-      <a href="#/students/{{student.username}}/class_sites/{{classSite.class_site.code}}">{{ classSite.class_site.description }}</a>
+      <a class="unsortable">{{ classSite.class_site.description }}</a>
       <span class="card-class-site-status" status-tooltip status="classSite.status" tooltiptext="classSite.status | colorToStatus"></span>
   </div>
   <div class="average-bar-container" ng-if="classSite.current_student_score_average || classSite.current_class_score_average">
