--- a/sespa/app/views/student_detail.html
+++ b/sespa/app/views/student_detail.html
@@ -1,5 +1,6 @@
 <div ng-if="student" class="col-lg-12">
 <h2 class="sub-header">{{student.first_name}} {{student.last_name}}</h2>
+<p><a href="mailto:{{student.username}}@umich.edu" target="_top">{{student.username}}@umich.edu</a></p>
 <p><a class="unsortable">Student ID: </a>{{ student.univ_id }}</p>
 <hr class="main-no-margin-top"/>
 
