--- a/sespa/app/views/student_class_site_list_table.html
+++ b/sespa/app/views/student_class_site_list_table.html
@@ -30,18 +30,22 @@
         <span status-tooltip status="classSite.status" tooltiptext="classSite.status | colorToStatus"></span>
       </td>
       <td>
-        <div class="average-bar-container" ng-if="classSite.current_student_score_average || classSite.current_class_score_average">
+        <div class="average-bar-container">
           <div class="average-bar student-average-bar" role="progressbar" aria-valuenow="{{classSite.current_student_score_average}}"
             aria-valuemin="0" aria-valuemax="100" style="width: {{classSite.current_student_score_average}}%;">
-            <p class="average-bar-text">{{classSite.current_student_score_average}}%</p>
-            <span class="sr-only">Student Percentage: {{classSite.current_student_score_average}}%</span>
+            <p class="average-bar-text" ng-if="classSite.current_student_score_average != null">{{classSite.current_student_score_average}}%</p>
+            <p class="average-bar-text" ng-if="classSite.current_student_score_average == null">N/A</p>
+            <span class="sr-only" ng-if="classSite.current_student_score_average != null">Student Percentage: {{classSite.current_student_score_average}}%</span>
+            <span class="sr-only" ng-if="classSite.current_student_score_average == null">Student Percentage: N/A</span>
           </div>
         </div>
-        <div class="average-bar-container" ng-if="classSite.current_student_score_average || classSite.current_class_score_average">
+        <div class="average-bar-container">
           <div class="average-bar class-average-bar" role="progressbar" aria-valuenow="{{classSite.current_class_score_average}}"
             aria-valuemin="0" aria-valuemax="100" style="width: {{classSite.current_class_score_average}}%;">
-            <p class="average-bar-text">{{classSite.current_class_score_average}}%</p>
-            <span class="sr-only">Class Average Percentage: {{classSite.current_class_score_average}}%</span>
+            <p class="average-bar-text" ng-if="classSite.current_class_score_average != null">{{classSite.current_class_score_average}}%</p>
+            <p class="average-bar-text" ng-if="classSite.current_class_score_average == null">N/A</p>
+            <span class="sr-only" ng-if="classSite.current_class_score_average != null">Class Average Percentage: {{classSite.current_class_score_average}}%</span>
+            <span class="sr-only" ng-if="classSite.current_class_score_average == null">Class Average Percentage: N/A</span>
           </div>
         </div>
       </td>
