--- a/sespa/app/styles/main.css
+++ b/sespa/app/styles/main.css
@@ -340,8 +340,7 @@ a.class-site-status-link {
 .average-bar-text {
   color: black;
   display: inline-block;
-  margin-left: 6px;
-  padding-left: 5px;
+  padding-left: 15px;
   position: absolute;
   right: 0;
   transform: translateX(100%);
@@ -539,4 +538,10 @@ svg text {
 
 .card-class-site-status {
     float: right;
+}
+
+.class-site-title {
+    padding-top: 20px !important;
+    padding-bottom: 20px !important;
+    font-size: 20px;
 }
