--- a/sespa/app/styles/main.css
+++ b/sespa/app/styles/main.css
@@ -260,6 +260,7 @@ a.class-site-status-link {
   text-align: left;
   padding-left: 5px;
   min-width: 5em;
+  border-radius: 4px 0px 0px 4px;
 }
 
 .progress-label {
